--- a/projet/src/app/work/work.component.scss
+++ b/projet/src/app/work/work.component.scss
@@ -4,7 +4,7 @@
         #non-printable { display: none; }
         #printable { display: block; }
         body {
-            content:url('./../../assets/images/d.svg');
+            content:url('./../../assets/images/A60.svg');
            }
            * {
             -webkit-print-color-adjust: exact;
@@ -13,7 +13,7 @@
 
   
     .bc_image{
-        background-image: url('./../../assets/images/d.svg');
+        background-image: url('./../../assets/images/A60.svg');
         background-size: cover;
         background-repeat: no-repeat;
         //height: 100%;
