--- a/projet/src/app/work/work.component.scss
+++ b/projet/src/app/work/work.component.scss
@@ -13,7 +13,7 @@
 
   
     .bc_image{
-        background-image: url('./../../assets/images/A60.svg');
+       // background-image: url('./../../assets/images/A60.svg');
         background-size: cover;
         background-repeat: no-repeat;
         //height: 100%;
